@@ -200,6 +200,13 @@ FirewallRuleSet users-to-router {
 #
   MaxClients 250
 
+# Parameter: SessionTimeout
+# Default: 0
+#
+# Set the default session length in seconds. A value of 0 is for
+# sessions without an end.
+#
+
 # Parameter: PreAuthIdleTimeout
 # Default: 300
 #
