@@ -7,7 +7,8 @@ nodogsplash (3.0.0)
       PasswordAttempts, Username, Password
   * Add binauth feature as a replacement for the old binvoucher feature
     * call a script with username/password to decide the authentication
-  * Replace ClientTimeout/ClientForceTimeout settings with PreauthIdleTimeout and AuthedIdleTimeout
+  * Replace ClientForceTimeout setting with SessionTimeout
+  * Replace ClientTimeout settings with PreauthIdleTimeout and AuthedIdleTimeout
 
  -- Moritz Warning <moritzwarning@web.de>  Tue, 31 July 2018 19:19:00 +0000
 
